# mpw

./: ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  PPC_COOKIE_ANALYSIS.md  PPC_EXIT_MECHANISM.md  PPC_PHASE1.md  PPC_PHASE2.md  PPC_PHASE3.md  PPC_PHASE4.md  PPC_PHASE5.md  PPC_PHASE6.md  PPC_PHASE7.md  PPC_PHASE8.md  PPC_PLAN.md  PPC_STATUS.md  PPC_STDCLIB_INIT.md  README.md  README.text  dump-pef-hello  dump-pef-stdclib  macos_compat.h  trace.txt
.claude/skills/classic-mac-dev/: SKILL.md
cpu/: CMakeLists.txt
cpu/m68k/: CMakeLists.txt  CpuModule.h  defs.h  fmem.h  m68k_uc.cpp
cpu/m68k_uc/: m68k_uc.cpp
cpu/ppc/: CMakeLists.txt  ppc.cpp  ppc.h  ppc_test.cpp
lsp/: CMakeLists.txt  diagnostic_parser.cpp  diagnostic_parser.h  document_store.cpp  document_store.h  jsonrpc.cpp  jsonrpc.h  main.cpp  server.cpp  server.h  tool_runner.cpp  tool_runner.h  transport.cpp  transport.h
mpw/: CMakeLists.txt  environment.rl  mpw.cpp  mpw.h  mpw_access.cpp  mpw_close.cpp  mpw_io.cpp  mpw_ioctl.cpp
rsrc/: CMakeLists.txt  rsrc.cpp  rsrc.h  rsrc_fork_accessor.cpp
toolbox/: CMakeLists.txt  cfm_stubs.cpp  cfm_stubs.h  cfm_test.cpp  debug.cpp  dispatch.cpp  dispatch_test.cpp  fpinfo.cpp  loader.cpp  loader.h  mm.cpp  mm.h  os.cpp  os.h  os_alias.cpp  os_fileinfo.cpp  os_gestalt.cpp  os_hfs_dispatch.cpp  os_highlevel.cpp  os_hwpriv.cpp  os_internal.cpp  os_internal.h  os_volume.cpp  packages.cpp  path_utils.cpp  path_utils.h  pef.h  pef_inspect.cpp  pef_loader.cpp  pef_loader.h  pef_test.cpp  ppc_dispatch.cpp  ppc_dispatch.h  process.cpp  qd.cpp  realpath.c  rm.cpp  rm.h  sane.cpp  toolbox.cpp  (+1 more)
tools/: FileRead.c  Hello.c  Makefile
